làm CI/CD và test